--- a/src/global/app.css
+++ b/src/global/app.css
@@ -5,149 +5,40 @@
   For more info on CSS variables check out https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_variables
  */
 
-:root {
-  --ion-color-primary: #488aff;
-  --ion-color-primary-rgb: 72,138,255;
-  --ion-color-primary-contrast: #fff;
-  --ion-color-primary-contrast-rgb: 255,255,255;
-  --ion-color-primary-shade: #3f79e0;
-  --ion-color-primary-tint: #5a96ff;
-  --ion-color-secondary: #32db64;
-  --ion-color-secondary-rgb: 50,219,100;
-  --ion-color-secondary-contrast: #fff;
-  --ion-color-secondary-contrast-rgb: 255,255,255;
-  --ion-color-secondary-shade: #2cc158;
-  --ion-color-secondary-tint: #47df74;
-  --ion-color-tertiary: #f4a942;
-  --ion-color-tertiary-rgb: 244,169,66;
-  --ion-color-tertiary-contrast: #fff;
-  --ion-color-tertiary-contrast-rgb: 255,255,255;
-  --ion-color-tertiary-shade: #d7953a;
-  --ion-color-tertiary-tint: #f5b255;
-  --ion-color-success: #10dc60;
-  --ion-color-success-rgb: 16,220,96;
-  --ion-color-success-contrast: #fff;
-  --ion-color-success-contrast-rgb: 255,255,255;
-  --ion-color-success-shade: #0ec254;
-  --ion-color-success-tint: #28e070;
-  --ion-color-warning: #ffce00;
-  --ion-color-warning-rgb: 255,206,0;
-  --ion-color-warning-contrast: #000;
-  --ion-color-warning-contrast-rgb: 0,0,0;
-  --ion-color-warning-shade: #e0b500;
-  --ion-color-warning-tint: #ffd31a;
-  --ion-color-danger: #f53d3d;
-  --ion-color-danger-rgb: 245,61,61;
-  --ion-color-danger-contrast: #fff;
-  --ion-color-danger-contrast-rgb: 255,255,255;
-  --ion-color-danger-shade: #d83636;
-  --ion-color-danger-tint: #f65050;
-  --ion-color-light: #f4f4f4;
-  --ion-color-light-rgb: 244,244,244;
-  --ion-color-light-contrast: #000;
-  --ion-color-light-contrast-rgb: 0,0,0;
-  --ion-color-light-shade: #d7d7d7;
-  --ion-color-light-tint: #f5f5f5;
-  --ion-color-medium: #989aa2;
-  --ion-color-medium-rgb: 152,154,162;
-  --ion-color-medium-contrast: #000;
-  --ion-color-medium-contrast-rgb: 0,0,0;
-  --ion-color-medium-shade: #86888f;
-  --ion-color-medium-tint: #a2a4ab;
-  --ion-color-dark: #222;
-  --ion-color-dark-rgb: 34,34,34;
-  --ion-color-dark-contrast: #fff;
-  --ion-color-dark-contrast-rgb: 255,255,255;
-  --ion-color-dark-shade: #1e1e1e;
-  --ion-color-dark-tint: #383838;
-  --ion-backdrop-color: #000;
-  --ion-overlay-background-color: #fafafa;
-  --ion-ripple-background-color: #000;
-  --ion-background-color: #fff;
-  --ion-background-color-rgb:  255, 255, 255;
-  --ion-background-color-step-50: #f2f2f2;
-  --ion-background-color-step-100: #e6e6e6;
-  --ion-background-color-step-150: #d9d9d9;
-  --ion-background-color-step-200: #ccc;
-  --ion-background-color-step-250: #bfbfbf;
-  --ion-background-color-step-300: #b3b3b3;
-  --ion-background-color-step-350: #a6a6a6;
-  --ion-background-color-step-400: #999;
-  --ion-background-color-step-450: #8c8c8c;
-  --ion-background-color-step-500: #808080;
-  --ion-background-color-step-550: #737373;
-  --ion-background-color-step-600: #666;
-  --ion-background-color-step-650: #595959;
-  --ion-background-color-step-700: #4d4d4d;
-  --ion-background-color-step-750: #404040;
-  --ion-background-color-step-800: #333;
-  --ion-background-color-step-850: #262626;
-  --ion-background-color-step-900: #191919;
-  --ion-background-color-step-950: #0d0d0d;
-  --ion-background-color-step-1000: #000;
-  --ion-border-color: #b2b2b2;
-  --ion-box-shadow-color: #000;
-  --ion-text-color: #000;
-  --ion-text-color-rgb: 0,0,0;
-  --ion-text-color-step-50: #0d0d0d;
-  --ion-text-color-step-100: #1a1a1a;
-  --ion-text-color-step-150: #262626;
-  --ion-text-color-step-200: #333;
-  --ion-text-color-step-250: #404040;
-  --ion-text-color-step-300: #4d4d4d;
-  --ion-text-color-step-350: #595959;
-  --ion-text-color-step-400: #666;
-  --ion-text-color-step-450: #737373;
-  --ion-text-color-step-500: #808080;
-  --ion-text-color-step-550: #8c8c8c;
-  --ion-text-color-step-600: #999;
-  --ion-text-color-step-650: #a6a6a6;
-  --ion-text-color-step-700: #b3b3b3;
-  --ion-text-color-step-750: #bfbfbf;
-  --ion-text-color-step-800: #ccc;
-  --ion-text-color-step-850: #d9d9d9;
-  --ion-text-color-step-900: #e6e6e6;
-  --ion-text-color-step-950: #f2f2f2;
-  --ion-text-color-step-1000: #fff;
-  --ion-tabbar-background-color: #f8f8f8;
-  --ion-tabbar-background-color-focused: #dadada;
-  --ion-tabbar-border-color: #b2b2b2;
-  --ion-tabbar-text-color: #8c8c8c;
-  --ion-tabbar-text-color-active: #488aff;
-  --ion-toolbar-background-color: #f8f8f8;
-  --ion-toolbar-border-color: #b2b2b2;
-  --ion-toolbar-color-active: #488aff;
-  --ion-toolbar-color-inactive: #8c8c8c;
-  --ion-toolbar-text-color: #000;
-  --ion-item-background-color: #fff;
-  --ion-item-background-color-active: #fff;
-  --ion-item-border-color: #c8c7cc;
-  --ion-item-text-color: #000;
-  --ion-placeholder-text-color: #999;
-
-  /** iOS overrides **/
-  --ion-border-ios-color: #dedede;
-  --ion-overlay-ios-background-color: #f9f9f9;
-  --ion-tabbar-ios-translucent-background-color: rgba(248, 248, 248, var(--ion-alpha-ios-high, var(--ion-alpha-high, .8)));
-  --ion-tabbar-ios-border-color: rgba(0, 0, 0, var(--ion-alpha-ios-border-medium, var(--ion-alpha-border-medium, .2)));
-  --ion-tabbar-ios-text-color-active: var(--ion-color-ios-primary, var(--ion-color-primary, #488aff));
-  --ion-toolbar-ios-translucent-background-color: rgba(248, 248, 248, var(--ion-alpha-ios-high, var(--ion-alpha-high, .8)));
-  --ion-toolbar-ios-border-color: rgba(0, 0, 0, var(--ion-alpha-ios-border-medium, var(--ion-alpha-border-medium, .2)));
-  --ion-item-ios-background-color: var(--ion-background-ios-color, var(--ion-background-color, #fff));
-  --ion-item-ios-background-color-active: #d9d9d9;
-
-  /** MD overrides **/
-  --ion-alpha-md-focused: .1;
-  --ion-alpha-md-border-low: .07;
-  --ion-alpha-md-border-medium: .13;
-  --ion-alpha-md-lowest: .1;
-  --ion-border-md-color: #c1c4cd;
-  --ion-overlay-md-background-color: #fafafa;
-  --ion-tabbar-md-border-color: rgba(0, 0, 0, var(--ion-alpha-md-border-low, var(--ion-alpha-border-low, .07)));
-  --ion-tabbar-md-text-color: var(--ion-text-md-color-step-400, var(--ion-text-color-step-400, #666));
-  --ion-toolbar-md-border-color: var(--ion-border-md-color, var(--ion-border-color, #c1c4cd));
-  --ion-toolbar-md-color-active: #4a4a4a;
-  --ion-toolbar-md-text-color: #424242;
-  --ion-item-md-background-color-active: #f1f1f1;
-  --ion-item-md-border-color: rgba(0, 0, 0, var(--ion-alpha-md-border-medium, var(--ion-alpha-border-medium, 0.13)));;
-}
+ @import "~@ionic/core/css/normalize.css";
+ @import "~@ionic/core/css/structure.css";
+ @import "~@ionic/core/css/typography.css";
+ @import "~@ionic/core/css/colors.css";
+ 
+ @import "~@ionic/core/css/padding.css";
+ @import "~@ionic/core/css/float-elements.css";
+ @import "~@ionic/core/css/text-alignment.css";
+ @import "~@ionic/core/css/text-transformation.css";
+ 
+ :root {
+   --ion-color-primary:                 #3880ff;
+   --ion-color-secondary:               #0cd1e8;
+   --ion-color-tertiary:                #7044ff;
+   --ion-color-success:                 #10dc60;
+   --ion-color-warning:                 #ffce00;
+   --ion-color-danger:                  #f04141;
+   --ion-color-light:                   #f4f5f8;
+   --ion-color-medium:                  #989aa2;
+   --ion-color-dark:                    #222428;
+ 
+   --ion-color-favorite:                #69BB7B;
+   --ion-color-twitter:                 #1da1f4;
+   --ion-color-google:                  #dc4a38;
+   --ion-color-vimeo:                   #23b6ea;
+   --ion-color-facebook:                #3b5998;
+ 
+   --ion-color-angular:                 #ac282b;
+   --ion-color-communication:           #8e8d93;
+   --ion-color-tooling:                 #fe4c52;
+   --ion-color-services:                #fd8b2d;
+   --ion-color-design:                  #fed035;
+   --ion-color-workshop:                #69bb7b;
+   --ion-color-food:                    #3bc7c4;
+   --ion-color-documentation:           #b16be3;
+   --ion-color-navigation:              #6600cc;
+ }
