--- a/src/global/app.css
+++ b/src/global/app.css
@@ -6,11 +6,13 @@
   global font family css then you can comment out the typography.css import.
 */
 
-/** Basic CSS for Ionic Apps */
+/** Core CSS required for ionic components to work property */
+@import "~@ionic/core/css/core.css";
+
+/** Basic CSS for apps built with Ionic */
 @import "~@ionic/core/css/normalize.css";
 @import "~@ionic/core/css/structure.css";
 @import "~@ionic/core/css/typography.css";
-@import "~@ionic/core/css/colors.css";
 
 /** Optional CSS utils that can be commented out */
 @import "~@ionic/core/css/padding.css";
