chore(): remove beta

--- a/src/global/app.css
+++ b/src/global/app.css
@@ -27,5 +27,5 @@
   https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_variables
 
   More info about color theming using Ionic:
-  https://beta.ionicframework.com/docs/theming/color-generator
+  https://ionicframework.com/docs/theming/color-generator
 */
