--- a/src/global/app.css
+++ b/src/global/app.css
@@ -7,19 +7,19 @@
 */
 
 /** Core CSS required for ionic components to work property */
-@import "~@ionic/core/css/core.css";
+@import '~@ionic/core/css/core.css';
 
 /** Basic CSS for apps built with Ionic */
-@import "~@ionic/core/css/normalize.css";
-@import "~@ionic/core/css/structure.css";
-@import "~@ionic/core/css/typography.css";
+@import '~@ionic/core/css/normalize.css';
+@import '~@ionic/core/css/structure.css';
+@import '~@ionic/core/css/typography.css';
 
 /** Optional CSS utils that can be commented out */
-@import "~@ionic/core/css/padding.css";
-@import "~@ionic/core/css/float-elements.css";
-@import "~@ionic/core/css/text-alignment.css";
-@import "~@ionic/core/css/text-transformation.css";
-@import "~@ionic/core/css/flex-utils.css";
+@import '~@ionic/core/css/padding.css';
+@import '~@ionic/core/css/float-elements.css';
+@import '~@ionic/core/css/text-alignment.css';
+@import '~@ionic/core/css/text-transformation.css';
+@import '~@ionic/core/css/flex-utils.css';
 
 /*
   The CSS Variables below can be used to theme your app.
